@@ -78,7 +78,7 @@ async def reporter(websocket, path):
         except:
             if magic in CURRENT['running']:
                 status = 'running'
-            elif os.path.isfile(os.path.join(RESULTS, magic)):
+            elif os.path.isfile(os.path.join(RESULTS, magic[0], magic[1], magic)):
                 status = 'results'
 
         # if our status hasn't changed, or if we don't know yet, don't send
@@ -98,7 +98,7 @@ async def reporter(websocket, path):
             msg = {'type': 'running', 'started': start, 'now': time.time()}
         elif status == 'results':
             try:
-                with open(os.path.join(RESULTS, magic), 'rb') as f:
+                with open(os.path.join(RESULTS, magic[0], magic[1], magic), 'rb') as f:
                     m = unprep(f.read())
             except:
                 return
